@@ -193,11 +193,16 @@ public class JavaInstanceSettingsTab extends JPanel {
 
                 if ((Integer) s.getValue() > 8192 && !maximumMemoryEightGBWarningShown) {
                     maximumMemoryEightGBWarningShown = true;
-                    DialogManager.okDialog().setTitle(GetText.tr("Warning"))
+                    int ret = DialogManager.okDialog().setTitle(GetText.tr("Warning"))
                             .setType(DialogManager.WARNING)
                             .setContent(GetText.tr(
                                     "Setting maximum memory above 8GB is not recommended for most modpacks and can cause issues."))
+                            .addOption(GetText.tr("More Explanation"))
                             .show();
+
+                    if (ret == 1) {
+                        OS.openWebBrowser("https://atl.pw/allocatetoomuchram");
+                    }
                 } else if ((OS.getMaximumRam() != 0 && OS.getMaximumRam() < 16384)
                         && (Integer) s.getValue() > (OS.getMaximumRam() / 2)
                         && !maximumMemoryHalfWarningShown) {
@@ -365,9 +370,8 @@ public class JavaInstanceSettingsTab extends JPanel {
 
         add(javaPathPanel, gbc);
 
-        boolean isUsingMinecraftProvidedJava = (!OS.isArm() || OS.isMacArm())
-                && Optional.ofNullable(instance.launcher.useJavaProvidedByMinecraft)
-                        .orElse(App.settings.useJavaProvidedByMinecraft);
+        boolean isUsingMinecraftProvidedJava = Optional.ofNullable(instance.launcher.useJavaProvidedByMinecraft)
+                .orElse(App.settings.useJavaProvidedByMinecraft);
         javaMinecraftProvidedLabel.setVisible(isUsingMinecraftProvidedJava);
         javaPathDummy.setVisible(isUsingMinecraftProvidedJava);
 
@@ -417,10 +421,7 @@ public class JavaInstanceSettingsTab extends JPanel {
         JLabelWithHover useJavaProvidedByMinecraftLabel = new JLabelWithHover(
                 GetText.tr("Use Java Provided By Minecraft") + "?", HELP_ICON,
                 new HTMLBuilder().center().text(GetText.tr(
-                        "This allows you to enable/disable using the version of Java provided by the version of Minecraft you're running.<br/><br/>It's highly recommended to not disable this, unless you know what you're doing.{0}",
-                        (OS.isArm() && !OS.isMacArm()) ? GetText.tr(
-                                "<br/><br/>This setting cannot be changed if using an ARM based computer as it's not compatable and will not be used.")
-                                : ""))
+                        "This allows you to enable/disable using the version of Java provided by the version of Minecraft you're running.<br/><br/>It's highly recommended to not disable this, unless you know what you're doing."))
                         .build());
         add(useJavaProvidedByMinecraftLabel, gbc);
 
@@ -439,8 +440,6 @@ public class JavaInstanceSettingsTab extends JPanel {
         } else {
             useJavaProvidedByMinecraft.setSelectedIndex(2);
         }
-
-        useJavaProvidedByMinecraft.setEnabled(!OS.isArm() || OS.isMacArm());
 
         useJavaProvidedByMinecraft.addItemListener(new ItemListener() {
             @Override
@@ -584,6 +583,18 @@ public class JavaInstanceSettingsTab extends JPanel {
         }
 
         return defaultValue;
+    }
+
+    public boolean isValidJavaParamaters() {
+        if (javaParameters.getText().contains("-Xms") || javaParameters.getText().contains("-Xmx")
+                || javaParameters.getText().contains("-XX:PermSize")
+                || javaParameters.getText().contains("-XX:MetaspaceSize")) {
+            DialogManager.okDialog().setTitle(GetText.tr("Help")).setContent(new HTMLBuilder().center().text(GetText.tr(
+                    "The entered Java Parameters were incorrect.<br/><br/>Please remove any references to Xmx, Xms or XX:PermSize."))
+                    .build()).setType(DialogManager.ERROR).show();
+            return false;
+        }
+        return true;
     }
 
     public void saveSettings() {
